--- a/ArtStation_Dashboard/Resource/AnnotationMessages.ar.resx
+++ b/ArtStation_Dashboard/Resource/AnnotationMessages.ar.resx
@@ -117,8 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConfirmPasswordMismatch" xml:space="preserve">
+    <value>كلمة المرور الجديدة وتأكيد كلمة المرور غير متطابقتين.</value>
+  </data>
   <data name="MaxName" xml:space="preserve">
     <value>اكبر عدد حروف هوا 20 حرف </value>
+  </data>
+  <data name="PasswordComplexity" xml:space="preserve">
+    <value> كلمة المرور يجب أن تحتوي على حرف كبير، حرف صغير، رقم، وأن تكون على الأقل 5 أحرف.</value>
   </data>
   <data name="RequiredField" xml:space="preserve">
     <value>هذا الحقل مطلوب!</value>
