--- a/ArtStation_Dashboard/Resource/ViewMessages.resx
+++ b/ArtStation_Dashboard/Resource/ViewMessages.resx
@@ -126,6 +126,9 @@
   <data name="Dashboard" xml:space="preserve">
     <value />
   </data>
+  <data name="EditUserProfileSucess" xml:space="preserve">
+    <value />
+  </data>
   <data name="LoginInValid" xml:space="preserve">
     <value />
   </data>
