--- a/ArtStation_Dashboard/Resource/ViewMessages.ar.resx
+++ b/ArtStation_Dashboard/Resource/ViewMessages.ar.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddBannerSuccessfully" xml:space="preserve">
+    <value>تم إضافه اللوحه بنجاح!</value>
+  </data>
   <data name="AddTraderSucessfully" xml:space="preserve">
     <value>تم إضافة حساب الشركة بنجاح!</value>
   </data>
@@ -131,6 +134,9 @@
   </data>
   <data name="LoginInValid" xml:space="preserve">
     <value>اسم المستخدم غير صحيح!</value>
+  </data>
+  <data name="OrderReady" xml:space="preserve">
+    <value>الطلب جاهز للشحن</value>
   </data>
   <data name="WelcomeWhenLogin" xml:space="preserve">
     <value>مرحبا بك فى Art Station !</value>
