--- a/ArtStation_Dashboard/Resource/ViewMessages.en.resx
+++ b/ArtStation_Dashboard/Resource/ViewMessages.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddBannerSuccessfully" xml:space="preserve">
+    <value>Banner Added Successfully!</value>
+  </data>
   <data name="AddTraderSucessfully" xml:space="preserve">
     <value>Company Account Added Successfully!</value>
   </data>
@@ -131,6 +134,9 @@
   </data>
   <data name="LoginInValid" xml:space="preserve">
     <value>UserName Or Password is InCorrect!</value>
+  </data>
+  <data name="OrderReady" xml:space="preserve">
+    <value>Order Ready To Shipped!</value>
   </data>
   <data name="WelcomeWhenLogin" xml:space="preserve">
     <value>Welcome To Art Station !</value>
