--- a/ArtStation_Dashboard/Resource/AnnotationMessages.resx
+++ b/ArtStation_Dashboard/Resource/AnnotationMessages.resx
@@ -141,4 +141,7 @@
   <data name="RequiredField" xml:space="preserve">
     <value />
   </data>
+  <data name="CategoryRequired" xml:space="preserve">
+    <value />
+  </data>
 </root>
