--- a/ArtStation_Dashboard/Resource/AnnotationMessages.ar.resx
+++ b/ArtStation_Dashboard/Resource/AnnotationMessages.ar.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CategoryRequired" xml:space="preserve">
+    <value>يجب ادخال اسم التصنيف.</value>
+  </data>
   <data name="ConfirmPasswordMismatch" xml:space="preserve">
     <value>كلمة المرور الجديدة وتأكيد كلمة المرور غير متطابقتين.</value>
   </data>
