--- a/ArtStation_Dashboard/Resource/AnnotationMessages.resx
+++ b/ArtStation_Dashboard/Resource/AnnotationMessages.resx
@@ -147,4 +147,7 @@
   <data name="AddBannerSucessfully" xml:space="preserve">
     <value />
   </data>
+  <data name="PasswordLength" xml:space="preserve">
+    <value />
+  </data>
 </root>
