--- a/ArtStation_Dashboard/Resource/ViewMessages.ar.resx
+++ b/ArtStation_Dashboard/Resource/ViewMessages.ar.resx
@@ -132,6 +132,9 @@
   <data name="EditUserProfileSucess" xml:space="preserve">
     <value>تم تعديل حساب العميل بنجاح!</value>
   </data>
+  <data name="EditUserSucessfully" xml:space="preserve">
+    <value>تم تعديل حساب المستخدم بنجاح!</value>
+  </data>
   <data name="LoginInValid" xml:space="preserve">
     <value>اسم المستخدم غير صحيح!</value>
   </data>
