--- a/ArtStation_Dashboard/Resource/ViewMessages.resx
+++ b/ArtStation_Dashboard/Resource/ViewMessages.resx
@@ -132,6 +132,9 @@
   <data name="EditUserProfileSucess" xml:space="preserve">
     <value />
   </data>
+  <data name="EditUserSucessfully" xml:space="preserve">
+    <value />
+  </data>
   <data name="LoginInValid" xml:space="preserve">
     <value />
   </data>
